# simple-transmitter

./: .gitignore  CMakeLists.txt  README.md
dependencies/doctest/: CMakeLists.txt
include/: parameters.hpp  socket.hpp  transmitter.h
include/input/: inputParametersBuilder.hpp  socketAddress.hpp
include/packet/: byteData.hpp
src/: CMakeLists.txt  byteData.cpp  input.cpp  main.cpp  packet.cpp  packetBuilder.cpp  socket.cpp  socketAddress.cpp
src/input/: inputParameters.hpp  socketAddress.cpp  socketAddress.hpp
src/main/: input.cpp  input.hpp  main.cpp
src/packet/: byteData.cpp  byteData.hpp  data.hpp  fileData.cpp  fileData.hpp  filePacketConsumer.cpp  filePacketConsumer.hpp  filePacketProducer.cpp  filePacketProducer.hpp  packet.cpp  packet.hpp  packetBuilder.cpp  packetBuilder.hpp  packetConsumer.hpp  packetProducer.hpp  textData.cpp  textData.hpp  textPacketConsumer.cpp  textPacketConsumer.hpp  textPacketProducer.cpp  textPacketProducer.hpp
src/transmitter/: dataEntity.hpp  file.hpp  packetController.cpp  packetController.hpp  socket.cpp  socket.hpp  text.hpp  transmissionController.cpp  transmissionController.hpp  transmitter.cpp  transmitter.hpp
tests/: CMakeLists.txt  PacketTest.cpp
